<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5sp"
    android:gravity="center_horizontal">
<ImageView android:id="@+id/about_image"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:contentDescription="@string/about_logo"
	android:src="@drawable/logo"></ImageView>
<TextView android:id="@+id/about_header"
	android:textSize="20sp"
	android:textStyle="bold"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/about_header"></TextView>
<TextView android:id="@+id/about_link"
	android:textSize="15sp"
   	android:layout_width="wrap_content"
   	android:layout_height="wrap_content"
   	android:text="@string/about_link"
	android:layout_gravity="center_horizontal"
	android:gravity="center_horizontal"
	android:autoLink="web"/>
<TextView android:id="@+id/about_copyright"
	android:textSize="15sp"
   	android:layout_width="wrap_content"
   	android:layout_height="wrap_content"
   	android:text="@string/about_copyright"
	android:layout_gravity="center_horizontal"
	android:gravity="center_horizontal"/>
<TextView android:id="@+id/about_blank"
   	android:layout_width="wrap_content"
   	android:layout_height="wrap_content"
   	android:text=""
	android:layout_gravity="center_horizontal"
	android:gravity="center_horizontal"/>
<ScrollView android:id="@+id/about_scroll"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
		<TextView android:id="@+id/about_license"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/about_license"
			android:layout_gravity="center_horizontal" android:gravity="fill_horizontal"/>
</ScrollView>
</LinearLayout>
